--- a/config/jetstream/nats.conf
+++ b/config/jetstream/nats.conf
@@ -1,12 +1,19 @@
 # Enable JetStream
 jetstream: {
   store_dir: "/data/jetstream"
-  max_mem_store: 1Gb
-  max_file_store: 2Gb
+  max_mem_store: 4Gb
+  max_file_store: 10Gb
+}
+
+authorization {
+  user: "admin"
+  password: "jetstream123"
 }
 
 # Enable Monitoring (for http://localhost:8222)
 http: "0.0.0.0:8222"
 
-# Optional but recommended
 server_name: "local-nats"
+
+max_payload: 2Mb
+max_connections: 1000
