--- a/deploy/config/systemd/server.service
+++ b/deploy/config/systemd/server.service
@@ -1,10 +1,10 @@
 [Unit]
-Description=WebServer for code execution system
+Description=WolfServer for code execution system
 After=network.target
 
 [Service]
 Type=simple
-ExecStart=/usr/local/bin/web_server
+ExecStart=/usr/local/bin/wolf_server
 Restart=always
 MemoryMax=8G
 User=root
