1.use official released images and binaries in local deployment script\n 2. minor bug fixes.

--- a/deploy/docker-compose-local.yml
+++ b/deploy/docker-compose-local.yml
@@ -20,7 +20,7 @@ services:
       - "4222:4222"
       - "8222:8222"
     volumes:
-      - ${WOLF_DIR}/config/jetstream/nats.conf:/etc/nats/nats.conf:ro
+      - ${WOLF_DIR}/deploy/config/jetstream/nats.conf:/etc/nats/nats.conf:ro
       - nats-data:/data/jetstream
     networks: [wolf]
 
