--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,15 +22,23 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GHCR_PAT }}
 
-      - name: Build multi-arch Docker image
-        run: |
-          docker buildx create --use
-          docker buildx build \
-            --platform linux/amd64,linux/arm64 \
-            -t ghcr.io/${{ github.repository_owner }}/wolf/wolf-worker:${GITHUB_REF_NAME} \
-            -t ghcr.io/${{ github.repository_owner }}/wolf/wolf-worker:latest \
-            --push \
-            -f cmd/wolf_worker/Dockerfile .
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: cmd/wolf_worker/Dockerfile
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: |
+            ghcr.io/ssuji15/wolf/wolf-worker:test
+            ghcr.io/ssuji15/wolf/wolf-worker:latest
+
   goreleaser:
     runs-on: ubuntu-latest
     steps:
